// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OnboardingSingleTag /> when given a following tag renders correctly 1`] = `
<div
  class="onboarding-tag-container followed-tag"
  id="onboarding-tag-container-undefined"
  style="background: undefined"
>
  <a
    class="onboarding-tag-link"
    href="#"
    onClick={[Function]}
    style="color:undefined"
  />
  <a
    class="onboarding-tag-link-follow"
    href="#"
    id="onboarding-tag-link-follow-undefined"
    onClick={[Function]}
  >
    ✓
  </a>
</div>
`;

exports[`<OnboardingSingleTag /> when given a non-following tag renders correctly 1`] = `
<div
  class="onboarding-tag-container"
  id="onboarding-tag-container-undefined"
  style="background: undefined"
>
  <a
    class="onboarding-tag-link"
    href="#"
    onClick={[Function]}
    style="color:undefined"
  />
  <a
    class="onboarding-tag-link-follow"
    href="#"
    id="onboarding-tag-link-follow-undefined"
    onClick={[Function]}
  >
    +
  </a>
</div>
`;
